--- a/onexpay-alipay/build.gradle
+++ b/onexpay-alipay/build.gradle
@@ -32,9 +32,15 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
-    api fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(dir: 'libs', include: ['*.jar','*.aar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    implementation project(':onexpay-core')
+    api project(':onexpay-core')
 }
