--- a/onexpay-unionpay/build.gradle
+++ b/onexpay-unionpay/build.gradle
@@ -34,7 +34,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation project(':onexpay-core')
+    api project(':onexpay-core')
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.fragment:fragment-ktx:1.2.4'
