--- a/onexpay-wxpay/build.gradle
+++ b/onexpay-wxpay/build.gradle
@@ -34,6 +34,6 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation project(':onexpay-core')
-    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.3.1'
+    api project(':onexpay-core')
+    api 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.3.1'
 }
